--- a/src/lib/modules/tree-body/components/filter-row/filter-row.component.html
+++ b/src/lib/modules/tree-body/components/filter-row/filter-row.component.html
@@ -1,5 +1,5 @@
 <td *ngIf="configs.multi_select"></td>
-<td *ngIf="(configs.actions.edit || configs.actions.delete || configs.actions.add)"></td>
+<td *ngIf="(configs.actions?.edit || configs.actions?.delete || configs.actions?.add)"></td>
 <td *ngFor="let column of columns">
   <div *ngIf="column.filter">
     <input type="text" (keyup)="filter()" [(ngModel)]="search_values[column.name]">
