--- a/src/lib/modules/tree-head/tree-head.component.html
+++ b/src/lib/modules/tree-head/tree-head.component.html
@@ -1,64 +1,36 @@
 <ng-container *ngIf="configs">
-  <tr [ngClass]="configs.css.header_class">
+  <tr [ngClass]="configs.css?.header_class">
     <th *ngIf="configs.multi_select" class="checkbox_column">
-      <input
-        type="checkbox"
-        (click)="selectAll($event)"
-        [checked]="this.internal_configs.all_selected"
-      />
+      <input type="checkbox" (click)="selectAll($event)" [checked]="this.internal_configs.all_selected" />
     </th>
-    <th
-      *ngIf="
-        configs.actions.add || configs.actions.edit || configs.actions.delete
-      "
-      class="action-column"
-      width="{{ configs.action_column_width }}"
-      (click)="addRow()"
-    >
+    <th *ngIf="
+        configs.actions?.add || configs.actions?.edit || configs.actions?.delete
+      " class="action-column" width="{{ configs.action_column_width }}" (click)="addRow()">
       <span class="icon-container">
-        <span
-          *ngIf="
+        <span *ngIf="
             !internal_configs.show_add_row &&
-            configs.actions.add &&
-            configs.css.add_icon.length > 0
-          "
-          [innerHTML]="configs.css.add_icon | safeHtml"
-          title="Add a row"
-        ></span>
-        <span
-          *ngIf="
+            configs.actions?.add &&
+            configs.css?.add_icon?.length! > 0
+          " [innerHTML]="configs.css?.add_icon! | safeHtml" title="Add a row"></span>
+        <span *ngIf="
             !internal_configs.show_add_row &&
-            configs.actions.add &&
-            configs.css.add_icon.length == 0
-          "
-          title="Add a row"
-          class="inbuild-icon"
-          >+</span
-        >
+            configs.actions?.add &&
+            configs.css?.add_icon?.length == 0
+          " title="Add a row" class="inbuild-icon">+</span>
       </span>
-      <span *ngIf="internal_configs.show_add_row || !configs.actions.add"
-        >Actions</span
-      >
+      <span *ngIf="internal_configs.show_add_row || !configs.actions?.add">Actions</span>
     </th>
-    <th
-      *ngFor="let column of columns"
-      [ngClass]="{ 'column-hide': column.hidden }"
-      [attr.width]="column.width"
-    >
-      <div
-        [innerHTML]="
+    <th *ngFor="let column of columns" [ngClass]="{ 'column-hide': column.hidden }" [attr.width]="column.width">
+      <div [innerHTML]="
           column.header_renderer
             ? column.header_renderer(column.header)
             : column.header
-        "
-      ></div>
+        "></div>
     </th>
-    <th
-      *ngIf="
+    <th *ngIf="
         (configs.show_parent_on_edit && internal_configs.show_parent_col) ||
         internal_configs.show_add_row
-      "
-    >
+      ">
       Parent
     </th>
   </tr>
