--- a/src/lib/modules/subgrid/components/subgrid-head/subgrid-head.component.scss
+++ b/src/lib/modules/subgrid/components/subgrid-head/subgrid-head.component.scss
@@ -1,45 +1,44 @@
-@import '../../../tree-head/tree-head.component.scss';
+@import "../../../tree-head/tree-head.component.scss";
 
 th {
-    
-    &.sortable {
-        cursor: pointer;
-        &:hover {
-            span.arrow-up {
-                border-bottom: 6px solid $sort-hover-color;
-            }
-            span.arrow-down {
-                border-top: 6px solid $sort-hover-color;
-            }
-        }
+  &.sortable {
+    cursor: pointer;
+    &:hover {
+      span.arrow-up {
+        border-bottom: 6px solid $sort-hover-color;
+      }
+      span.arrow-down {
+        border-top: 6px solid $sort-hover-color;
+      }
     }
+  }
 
-    span.arrow-up {
-        width: 0; 
-        height: 0; 
-        border-left: 5px solid transparent;
-        border-right: 5px solid transparent;                
-        border-bottom: 6px solid $sort-color;
-        position: relative;
-        top: -18px;
+  span.arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 6px solid $sort-color;
+    position: relative;
+    top: -18px;
 
-        &.active {
-            border-bottom: 6px solid $sort-active-color !important;
-        }
+    &.active {
+      border-bottom: 6px solid $sort-active-color !important;
     }
-      
-    span.arrow-down {
-        width: 0; 
-        height: 0; 
-        border-left: 5px solid transparent;
-        border-right: 5px solid transparent;
-        border-top: 6px solid $sort-color;
-        position: relative;
-        left: 10px;
-        top: 17px;
+  }
 
-        &.active {
-            border-top: 6px solid $sort-active-color !important;
-        }
+  span.arrow-down {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 6px solid $sort-color;
+    position: relative;
+    left: 10px;
+    top: 17px;
+
+    &.active {
+      border-top: 6px solid $sort-active-color !important;
     }
+  }
 }
