--- a/src/lib/modules/tree-body/components/add-row/add-row.component.scss
+++ b/src/lib/modules/tree-body/components/add-row/add-row.component.scss
@@ -1,12 +1,12 @@
-@import '../../tree-body.component.scss';
+@import "../../tree-body.component.scss";
 
 svg {
-    width: 20px;
-    padding-right: 4px;
+  width: 20px;
+  padding-right: 4px;
 }
 
 div.icon-container {
-    display: inline-block;
-    width: 50%;
-    text-align: center;
+  display: inline-block;
+  width: 50%;
+  text-align: center;
 }
