--- a/src/lib/modules/tree-cell/components/tree-cell-editor/default/cell-editor/tree-cell-editor.component.html
+++ b/src/lib/modules/tree-cell/components/tree-cell-editor/default/cell-editor/tree-cell-editor.component.html
@@ -1,8 +1,3 @@
-<input type="text" 
-    [(ngModel)]="row_data[column.name]" 
-    [ngClass]="{'cell-default': true, 'expandable-editor': expandable_column}"
-    (click)="cellclick.emit($event)"
-    (keydown.enter)="editcomplete.emit($event)"
-    (keydown.esc)="canceledit.emit()"
-    size="1"
-    >
+<input type="text" [(ngModel)]="row_data[column.name]"
+    [ngClass]="{'cell-default': true, 'expandable-editor': expandable_column}" (click)="cellclick.emit($event)"
+    (keydown.enter)="editcomplete.emit($event)" (keydown.esc)="canceledit.emit()" size="1">
